# Scrapnel

./: .replit  Notes.txt  README.md  entity.py  main.py  pyproject.toml  scavver.py  turtlecommands.txt
